--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+.heading{
+  background-color: purple;
+  text-align: center;
+  padding: 15px;
+  color: white;
+  margin: 15px;
+}
